--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="CSS" type="text/css" href="CSS.css">
+    <link rel=stylesheet type="text/css" href="CSS.css">
 </head>
 <body>
     <div class="container">
