--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html>
 <head>
     <link rel=stylesheet type="text/css" href="CSS.css">
+    <link href="https://fonts.googleapis.com/css?family=Bungee|Open+Sans" rel="stylesheet">
 </head>
 <body>
     <div class="container">
-        <div class="headertop"></div>
+        <div class="headertop"> <h2>This is the new header</h2></div>
         <div class="headerbottom"></div>
         <div class="columnleft"></div>
-        <div class="columncenter"></div>
+        <div class="columncenter"><p1>Why do i have to do this, i just want to chill and do nothing, not work</p1></div>
         <div class="columnright"></div>
         <div class="footer"></div>
     </div>
